* Optimize Function#bind and Function#bindAsEventListener to avoid using Array#concat when only the context argument is given. [kangax]

* Ensure Selector.handlers.id finds the proper element even when it's not attached to the document. [jddalton]

* Fix Position.within in IE. [jddalton]

* Fix the deprecated Position.withinIncludingScrollOffsets. [jddalton]

* Consolidate document.body getOffsetParent checks into a private utility method. [staaky, jddalton]

* Fix issues with Element#cumulativeScrollOffset and Opera <9.5. [staaky, jddalton]

* Fix issues with Element#clonePosition and element border/padding. [staaky, jddalton]

* Remove the redefinition of Element#getOffsetParent in IE. [staaky, jddalton]

* Make Element#getDimensions always use offset(Height|Width) rather than client(Height|Width). [staaky, jddalton]

* Make Function#argumentNames use Function.prototype.toString. [Garrett Smith, jddalton, kangax]

* Rename variable in Form.Element.Serializers.select. [jddalton]

* Replace browser sniffing with capability detection in IE fork of String#unescapeHTML. [kangax]

* Coerce Opera's version string into a number whenever we need to sniff. [Sam Holman, jddalton]

* Amend previous checkin to restrict fix to Opera 9.5. [Andrew Dupont]

* Fix issue where Opera gets confused by complex selectors in $$. [Paulo Pereira, Andrea Baron, jddalton]  

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [hagen.seifert, jddalton]

* Ensure CSS files have loaded before firing the dom:loaded event. [Diego Perini, jddalton]

* Allow Form#request to pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]

* Ensure Element#readAttribute works properly when accessing the "type" attribute of an IFRAME. [#118 state:resolved] [Zekid, kangax]

* Ensure Object.isElement and Object.isHash handle "falsy" values properly. [jddalton, kangax]

* Fix exiting test task on INT signal. [Samuel Lebeau]
